fix: accessbility button func and grid on mobile calls.

--- a/core/static/css/_base.css
+++ b/core/static/css/_base.css
@@ -171,12 +171,6 @@ video {
     margin: 0 4px;
 }
 
-@media (max-width: 768px) {
-    .video-container {
-        grid-template-columns: 1fr; /* Apenas uma coluna em telas menores */
-    }
-}
-
 @media (min-width: 768px) {
     .md\:max-h-80vh {
         max-height: 80vh;
@@ -232,9 +226,9 @@ video {
 }
 
 .alternate-layout {
-    order: -1;
-    margin: -50px 0 30px 0;
     gap: 8rem !important;
+    position: absolute;
+    bottom: 50px;
 }
 
 .reduced-text {
@@ -249,10 +243,9 @@ video {
 
 @media (max-width: 768px) {
     .alternate-layout {
-        margin: -30px 0 30px 0;
         gap: 2rem !important;
     }
-    
+
     .btn.enlarged {
         transform: scale(1.1);
     }
